@@ -2,6 +2,8 @@ Revision history for Perl module Ouch
 
 0.0409 2016-10-19
  - Fixed some bugs related to Travis. Thanks to Zshawn Syed.
+ - Fix bugs when working with passed exceptions. Thanks to Flavio Poletti.
+ - Remove Build.PL. Thanks to Nick Tonkin, andk, Graham Knop, dcollinsn.
 
 0.0409 2015-01-27
  - Added support for Travis. Thanks to Zshawn Syed.
